--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html style="font-family:geneva,arial,helvetica;">
 <head>
-  <!-- Google Tag Manager -->
-<script src="gtag.js"></script>
-<!-- End Google Tag Manager -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
+
   <meta charset="utf-8">
   <title>Frozen Mango 747</title>
 <link rel="stylesheet" type="text/css" href="style.css">
