--- a/math-courses.html
+++ b/math-courses.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" style="font-family:geneva,arial,helvetica;">
 <head>
-    <script src="gtag.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="favicon.png"></head>
 <body>
