--- a/math-courses/cryptology/adfgvx.html
+++ b/math-courses/cryptology/adfgvx.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html style="font-family:geneva,arial,helvetica;">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
+
   <meta charset="utf-8">
   <title>ADFGVX</title>
 <link rel="stylesheet" type="text/css" href="style.css">
