--- a/math-courses.html
+++ b/math-courses.html
@@ -21,7 +21,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
     <h1>Math Courses</h1>
     <p>Ready to do some math?</p>
-    <p><button class="button" onclick="document.location = 'math-courses/home.html'">Yes!</button></p>
+    <p><button class="button" href="math-courses/home.html">Yes!</button></p>
 </div>
 </body>
 </html>
