--- a/treasure-hunt/astrology/backdrop.html
+++ b/treasure-hunt/astrology/backdrop.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- <html style= -->
 <html style = "font-family:geneva,arial,helvetica;background-color:black;background-image: url('wrong.jpg');background-size: 1200px 800px;background-repeat:no-repeat;">
 
 <head>
