--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Encryption Tool</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="../favicon.png">
     <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython.js"></script>
 </head>
 <body onload="brython()">
