--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -11,7 +11,7 @@
 <a href="about.html">Learn more about the Finger Cipher here.</a>
 <script type="text/python" src="FingerCipher.py"></script>
 <script type="text/python" src="fingerTool.py"></script>
-<p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea> <p id="" <button id="resetTable" class="button">Reset</button><pre></pre>
+<p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea> <button id="resetTable" class="button">Reset</button><pre></pre>
 <div class="row">
     <div class="column">
         <p>Message:</p><textarea id="ezone" rows="2" cols="10"></textarea>
