--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -7,12 +7,13 @@
     <link rel="icon" href="../favicon.png">
     <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython.js"></script>
 </head>
-<body onload="brython()">
-<a href="about.html">Learn more about the Finger Cipher here.</a>
+<body onload="brython()" class="custbody">
+    
+<a class="mainbody" href="about.html">Learn more about the Finger Cipher here.</a>
 <script type="text/python" src="FingerCipher.py"></script>
 <script type="text/python" src="fingerTool.py"></script>
 <p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea> <button id="resetTable" class="button">Reset</button><pre></pre>
-<div class="row">
+<div class="row mainbody">
     <div class="column">
         <p>Message:</p><textarea id="ezone" rows="2" cols="10"></textarea>
 <p>Key:</p><textarea id="ezone2" rows="2" cols="10"></textarea>
