--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -8,18 +8,19 @@
     <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython.js"></script>
 </head>
 <body onload="brython()" class="custbody">
-    
-<a class="mainbody" href="about.html">Learn more about the Finger Cipher here.</a>
-<script type="text/python" src="FingerCipher.py"></script>
-<script type="text/python" src="fingerTool.py"></script>
-<p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea> <button id="resetTable" class="button">Reset</button><pre></pre>
-<div class="row mainbody">
+<div class="mainbody">    
+    <a href="about.html">Learn more about the Finger Cipher here.</a>
+    <script type="text/python" src="FingerCipher.py"></script>
+    <script type="text/python" src="fingerTool.py"></script>
+    <p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea> <button id="resetTable" class="button">Reset</button><pre></pre>
+    </div>
+    <div class="row mainbody">
     <div class="column">
         <p>Message:</p><textarea id="ezone" rows="2" cols="10"></textarea>
-<p>Key:</p><textarea id="ezone2" rows="2" cols="10"></textarea>
-<pre></pre>
-<button id="ebutton" class="button">Encrypt</button>
-<p id="eresult"></p>
+        <p>Key:</p><textarea id="ezone2" rows="2" cols="10"></textarea>
+        <pre></pre>
+        <button id="ebutton" class="button">Encrypt</button>
+        <p id="eresult"></p>
     </div>
     <div class="column">
         <p>Message:</p><textarea id="dzone" rows="2" cols="10"></textarea>
