--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -12,7 +12,7 @@
     <a href="about.html">Learn more about the Finger Cipher here.</a>
     <script type="text/python" src="FingerCipher.py"></script>
     <script type="text/python" src="fingerTool.py"></script>
-    <p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea>
+    <p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea><pre></pre>
     <button id="resetTable" class="button">Reset</button><pre></pre>
     </div>
     <div class="row mainbody">
