--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -5,6 +5,7 @@
     <title>Encryption Tool</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="../favicon.png">
+    <script type="text/javascript" src="menu.js"></script>
     <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython.js"></script>
 </head>
 <body onload="brython()" class="custbody">
