--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-family:geneva,arial,helvetica;">
 <head>
     <meta charset="UTF-8">
     <title>Encryption Tool</title>
