--- a/finger-cipher/about.html
+++ b/finger-cipher/about.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-family:geneva,arial,helvetica;">
 <head>
     <meta charset="UTF-8">
     <title>About</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="../favicon.png">
+    <script type="text/javascript" src="menu.js"></script>
 </head>
 <body>
 <h1>About the Finger Cipher</h1>
