--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="../favicon.png">
     <script type="text/javascript" src="menu.js"></script>
+    <script type="text/javascript"> document.getElementById("fcet").className="active";</script>
     <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython.js"></script>
 </head>
 <body onload="brython()" class="custbody">
