--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="https://raw.githack.com/brython-dev/brython/master/www/src/brython.js"></script>
 </head>
 <body onload="brython()" class="custbody">
-<div class="mainbody">    
+<div class="mainbody">
+    <h1>Finger Cipher Encryption Tool</h1>
     <a href="about.html">Learn more about the Finger Cipher here.</a>
     <script type="text/python" src="FingerCipher.py"></script>
     <script type="text/python" src="fingerTool.py"></script>
