--- a/finger-cipher/about.html
+++ b/finger-cipher/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="../favicon.png">
     <script type="text/javascript" src="menu.js"></script>
+    <script type="text/javascript"> document.getElementById("fcabt").className="active";</script>
 </head>
 <body>
 <h1>About the Finger Cipher</h1>
