--- a/finger-cipher/about.html
+++ b/finger-cipher/about.html
@@ -11,5 +11,41 @@
 <body>
 <h1>About the Finger Cipher</h1>
 <a href="encryption-tool.html">You can use this tool to encrypt and decrypt.</a>
+    <h2>Encryption table</h2>
+    <ul>
+        <li>00-25: Lowercase Alphabet</li>
+        <li>26-51: Uppercase Alphabet</li>
+        <li>52-61: Digits 0-9</li>
+        <li>62-99: .,’”!?/</space>[]{}()+-=_*~`><|$&@#^%∆√:;≠</li>
+
+    <h2>Encryption</h2>
+    <p>The encryption process uses two inputs: the plaintext and the keyword / key. 
+    If the keyword is shorter than the plaintext, cycle through the characters until the string is long enough.
+    If using a key (the U.S. Constitution, for example), trim it to the length of the plaintext. 
+    The result will be referenced later as the ‘keyphrase’.</p>
+    <p>For an example, we’ll encrypt ‘El33t’ (5 characters) with ‘Oh say can you see’ (18 characters),
+    which we trim to ‘Oh sa’ (5 characters).</p>
+
+    <h3>Step 1</h3>
+    <p>Convert both the plaintext and the keyphrase to numerical values using the table above.</p>
+    <ul>
+        <li>El33t - [30 11 55 55 19]</li>
+
+        <li>Oh sa - [40 07 70 18 00]</li> 
+    </ul>
+
+    <h3>Step 2</h3>
+    <p>Add corresponding values in the matrices, but without carrying. For example, 35 + 96 = 21.</p>
+
+    <p>(Subtract in mod 10 to decrypt.)</p>
+
+    <p class="center">[70 18 25 63 19]</p>
+
+    <h3>Step 3</h3>
+    <p>Finally, convert the ciphertext to characters:</p>
+
+    <p class="center">“ qz,t”</p>
+
+    <p>(notice the space as the first character)</p>
 </body>
 </html>
