--- a/finger-cipher/about.html
+++ b/finger-cipher/about.html
@@ -17,7 +17,7 @@
             <li>00-25: Lowercase Alphabet</li>
             <li>26-51: Uppercase Alphabet</li>
             <li>52-61: Digits 0-9</li
-            <li>62-99: .,’”!?/</space>[]{}()+-=_*~`><|$&@#^%∆√:;≠</li>
+            <li>62-99: .,’”!?/\<space>[]{}()+-=_*~`><|$&@#^%∆√:;≠</li>
         <h2>Encryption</h2>
         <p>The encryption process uses two inputs: the plaintext and the keyword / key. 
     If the keyword is shorter than the plaintext, cycle through the characters until the string is long enough.
