--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -18,11 +18,11 @@
     <script type="text/javascript">
         function copyText() {
   /* Get the text field */
-  var copyText = document.getElementById("eresult");
+  var text = document.getElementById("eresult");
 
   /* Select the text field */
-  copyText.select();
-  copyText.setSelectionRange(0, 99999); /*For mobile devices*/
+  text.select();
+  text.setSelectionRange(0, 99999); /*For mobile devices*/
 
   /* Copy the text inside the text field */
   document.execCommand("copy");
