--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -33,7 +33,7 @@
         <pre></pre>
         <button id="ebutton" class="button">Encrypt</button>
         <p id="eresult"></p>
-        <button onclick="copyText()">Copy</button>
+        <button class="button" onclick="copyText()">Copy</button>
     </div>
     <div class="column">
         <p>Message:</p><textarea id="dzone" rows="10" cols="50"></textarea>
