--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -32,6 +32,7 @@
     </div>
     <div class="row mainbody">
     <div class="column">
+        <h2> Encrypt</h2>
         <p>Message:</p><textarea id="ezone" rows="10" cols="50"></textarea>
         <p>Key:</p><textarea id="ezone2" rows="10" cols="50"></textarea>
         <pre></pre>
@@ -40,6 +41,7 @@
         <button class="button" onclick="copyText()">Copy</button>
     </div>
     <div class="column">
+        <h2> Decrypt</h2>
         <p>Message:</p><button class="button" onclick="pasteText()">Paste</button><textarea id="dzone" rows="10" cols="50"></textarea>
 <p>Key:</p><textarea id="dzone2" rows="10" cols="50"></textarea>
 <pre></pre>
