--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -27,7 +27,7 @@
   clipText => document.getElementById(element).innerText = clipText);
         }
     </script>
-    <p>Alphabet</p><textarea id="alpha" rows="2" cols="50"></textarea><pre></pre>
+    <p>Alphabet</p><textarea id="alpha" rows="2" cols="50">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.,’”!?/\ []{}()+-=_*~`><|$&@#^%∆√	-:;≠</textarea><pre></pre>
     <button id="resetTable" class="button">Reset</button><pre></pre>
     </div>
     <div class="row mainbody">
