--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -27,8 +27,6 @@
   clipText => document.getElementById(element).innerText = clipText);
         }
     </script>
-    <p>Alphabet</p><textarea id="alpha" rows="2" cols="50">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.,’”!?/\ []{}()+-=_*~`><|$&@#^%∆√	-:;≠</textarea><pre></pre>
-    <button id="resetTable" class="button">Reset</button><pre></pre>
     </div>
     <div class="row mainbody">
     <div class="column">
@@ -51,5 +49,10 @@
         <button class="button" onclick="copyText('dresult')">Copy</button>
     </div>
 </div>
+    <div class="mainbody">
+        <p>Alphabet</p><textarea id="alpha" rows="2" cols="50">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.,’”!?/\ []{}()+-=_*~`><|$&@#^%∆√	-:;≠</textarea><pre></pre>
+    <button id="resetTable" class="button">Reset</button>
+        </div>
+        
 </body>
 </html>
