--- a/IF-games.html
+++ b/IF-games.html
@@ -25,6 +25,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1>IF Games</h1>
 <p style="text-decoration:none;color:#000000" href="IF-games/A-Day-at-School/Release/index.html">A Day at School</p>
 <p><button class="button" onclick="document.location = 'IF-games/A-Day-at-School/Release/play.html'">Play</button></p>
+  <p style="text-decoration:none;color:#000000" href="IF-games/Maze/Release/index.html">Maze</p>
+<p><button class="button" onclick="document.location = 'IF-games/Maze/Release/play.html'">Play</button></p>
 </div>
 </body>
 </html>
