--- a/IF-games/Maze/Release/index.html
+++ b/IF-games/Maze/Release/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Saumya Singhal - Maze</title>
+  <title>Saumya Singhal - A Maze Game</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="author" content="Saumya Singhal" />
-  <meta name="description" content="A page for the game Maze by Saumya Singhal." />
+  <meta name="description" content="A page for the game A Maze Game by Saumya Singhal." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
  </head>
 <body>
 <div class="container">
 <div class="coverimage"><span><a href="Cover.jpg"><img src="Small Cover.jpg" border="1"></a></span></div>
 <div class="introduction">
-	<h1><span>Maze</span></h1>
+	<h1><span>A Maze Game</span></h1>
 	<h2><span>Saumya Singhal</span></h2>
 	<div class="bibliography"><span>Release 1</span></div>
 </div>
 <div class="links">
 	<ul>
-	<li><div class="download"><a href="Maze.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;614KB)</span></div></li>
+	<li><div class="download"><a href="A Maze Game.gblorb">Story File</a> <span class="filetype">(Blorb,&nbsp;616KB)</span></div></li>
 	<div class="auxiliary"><li><a href="play.html">Play In-Browser</a> <span class="filetype">(link)</span></li></div>
 	</ul>
 </div>
@@ -25,7 +25,7 @@
 <div class="about"><span><p>A work of interactive fiction.</p></span></div>
 
 <div class="playinfo">
-	<p>Maze was created with <a href="http://inform7.com/">Inform</a> and has IFID AB17E5B3-AF8F-4569-80FC-E91ADF98BEEA. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://ccxvii.net/gargoyle/">Gargoyle
+	<p>A Maze Game was created with <a href="http://inform7.com/">Inform</a> and has IFID AB17E5B3-AF8F-4569-80FC-E91ADF98BEEA. To play a work like this one, you need an interpreter program: many are available, among them <a href="http://ccxvii.net/gargoyle/">Gargoyle
 for Mac OS X or Windows</a>; <a href="http://davidkinder.co.uk/frotz.html">Windows Frotz</a> or <a href="http://davidkinder.co.uk/glulxe.html">Windows Glulxe</a> for Windows.  
 Or you can play without downloading anything by following the 'Play In-Browser'
 link, using the Quixe interpreter. You'll need to have Javascript enabled
