--- a/IF-games/Maze/Release/play.html
+++ b/IF-games/Maze/Release/play.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Saumya Singhal - Maze — Play</title>
+  <title>Saumya Singhal - A Maze Game — Play</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="author" content="Saumya Singhal">
@@ -25,22 +25,16 @@ outspacing: 0     // gap between windows and edge of gameport
 };
 </script>
 
-<script src="interpreter/Maze.gblorb.js" type="text/javascript"></script>
+<script src="interpreter/A Maze Game.gblorb.js" type="text/javascript"></script>
   
  </head>
 <body class="play">
 <div class="container">
 <div class="coverimage"><span><a href="Cover.jpg"><img src="Small Cover.jpg" border="1"></a></span></div>
 <div class="links">
-<div class="smalltitle">Maze</div>
+<div class="smalltitle">A Maze Game</div>
 <ul>
-<ul>
-<li><a style="text-decoration:none;color:#000000" href="../../../IF-games.html">More Games</a></li>
-  <li><pre></pre></li>
-<li><a style="text-decoration:none;color:#000000" href="../../../index.html">Home Page</a></li>
-  <li><pre></pre></li>
-<li><a style="text-decoration:none;color:#000000" href="index.html">About</a></li>
-</ul>
+<li><a href="index.html">Home page</a></li>
 </ul>
 </div>
 
