--- a/finger-cipher/encryption-tool.html
+++ b/finger-cipher/encryption-tool.html
@@ -40,7 +40,7 @@
     </div>
     <div class="column">
         <h2> Decrypt</h2>
-        <p>Message:</p><button class="button" onclick="pasteText('dzone')">Paste</button>
+        <p>Message:</p><button class="button" onclick="pasteText('dzone')">Paste</button><pre></pre>
         <textarea id="dzone" rows="10" cols="50"></textarea>
 <p>Key:</p><textarea id="dzone2" rows="10" cols="50"></textarea>
 <pre></pre>
