--- a/index.html
+++ b/index.html
@@ -26,5 +26,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>Welcome to Frozen Mango 747!</p>
   <p>Here, you can find IF games and an online Mango Hunt.</p>
 </div>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyB47fRuLw3O0d7T_qEoWSbrWHBEDbLwgoc",
+    authDomain: "frozenmango747.firebaseapp.com",
+    databaseURL: "https://frozenmango747.firebaseio.com",
+    projectId: "frozenmango747",
+    storageBucket: "frozenmango747.appspot.com",
+    messagingSenderId: "740453536537",
+    appId: "1:740453536537:web:0fce1eeee6eac304856b88",
+    measurementId: "G-3TJHFTLZ5H"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 </html>
