--- a/treasure-hunt/astrology/illuminated.html
+++ b/treasure-hunt/astrology/illuminated.html
@@ -13,8 +13,7 @@
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>7</strong></font></a>
     <img src="strokes.png" width="546" height="490" class="center" >
-
-
-
-
-<p><pre>
+  </div>
+  </body>
+</html>
+  
