--- a/treasure-hunt/astrology/sincerity.html
+++ b/treasure-hunt/astrology/sincerity.html
@@ -12,7 +12,7 @@
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>8</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">This is a placeholder. Level 8 is still under construction. Check back Later!</font></p>
+<p><font color="white" size="6" face="Geneva">This is a placeholder. Level 8 is still under construction. Check back later!</font></p>
 
 
 <p><pre>
