--- a/treasure-hunt/astrology/sincerity.html
+++ b/treasure-hunt/astrology/sincerity.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Placeholder</title>
+  <title>Trees</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -12,18 +12,12 @@
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>8</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">This is a placeholder. Level 8 is still under construction. Check back later!</font></p>
-
-
-<p><pre>
-
-
-
-
-
-
-
-    </pre></p>
+<p><font color="white" size="6" face="Geneva">Where do trees come from?</font></p>
+<!-- Google! -->
+<img src="tree.jpeg" width="720" height="450" class="center" usemap="#door">
+    <map name="door" id="door">
+        <area shape="circle" coords="370,500,120" href="../shapes/geometry.html" alt="click me">
+    </map>
 
 
 </div>
