--- a/treasure-hunt/shapes/geometry.html
+++ b/treasure-hunt/shapes/geometry.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html style = "font-family:geneva,arial,helvetica;background-color: black">
+<!-- zip your lips -->
 <head>
   <meta charset="utf-8">
-  <title>GO met tree</title>
+  <title>Gee I'm a tree</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -31,8 +32,8 @@ function check() {
 </script>
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>9</strong></font></a>
-    <p><font color="white" size="8" face="Geneva">This is a placeholder. Level 9 is still under construction.</font></p>
-
+    <p><font color="white" size="8" face="Geneva">This is a security barrier. Please enter the password for Level 9 again.</font></p>
+    <img src="lips.jpg" class="center">
 </div>
 </body>
 </html>
