--- a/treasure-hunt/shapes/drummerboy.html
+++ b/treasure-hunt/shapes/drummerboy.html
@@ -3,18 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Its a trap!</title>
+  <title>Placeholder</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
 <body id="bod" >
 
 <div class="mainbody">
-    <a><font color="white" size="10" face="Geneva"><strong>10</strong></font></a>
+    <a><font color="white" size="10" face="Geneva"><strong>11</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">Who?</font></p>
+<p><font color="white" size="6" face="Geneva">Level 11 is still under construction.</font></p>
 
-    <image src="jailhouserock.jpg"  width="560" height="747" class="center" ></image>
 
 
 
