--- a/treasure-hunt/astrology/gibberish.html
+++ b/treasure-hunt/astrology/gibberish.html
@@ -1,13 +1,25 @@
 ﻿<!DOCTYPE html>
 <html style = "font-family:geneva,arial,helvetica;background-color: black">
 <head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
   <meta charset="utf-8">
+    <meta name="robots" content="noindex" />
   <title>Et tu, Brute?</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
 
 <body id="bod">
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>
 
         // Convert to 32bit integer
