--- a/treasure-hunt/jug.html
+++ b/treasure-hunt/jug.html
@@ -2,12 +2,15 @@
 <html style = "font-family:geneva,arial,helvetica;background-color: black">
 <head>
   <meta charset="utf-8">
+    <meta name="robots" content="noindex" />
   <title>Level 3</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" href="../favicon.png">
 </head>
 
 <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>3</strong></font></a>
     <p><font color="white" size="8" face="Geneva">Remember to keep checking the source on every level!</font></p>
