--- a/treasure-hunt/astrology/illuminate.html
+++ b/treasure-hunt/astrology/illuminate.html
@@ -3,13 +3,24 @@
 <html style = "font-family:geneva,arial,helvetica;background-color:black;">
 
 <head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
   <meta charset="utf-8">
+    <meta name="robots" content="noindex" />
   <title>ILLUMINAT</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
 <body id="bod" >
-
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>7</strong></font></a>
     <img src="strokes.png" width="546" height="490" class="center" >
