--- a/treasure-hunt/astrology/sincerity.html
+++ b/treasure-hunt/astrology/sincerity.html
@@ -2,18 +2,29 @@
 <html style = "font-family:geneva,arial,helvetica;background-color:black;">
 
 <head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
   <meta charset="utf-8">
+    <meta name="robots" content="noindex" />
   <title>Trees</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
 <body id="bod" >
-
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>8</strong></font></a>
 
 <p><font color="white" size="6" face="Geneva">Where do trees come from?</font></p>
-<!-- Google! -->
+
 <img src="tree.jpeg" width="720" height="450" class="center" usemap="#door">
     <map name="door" id="door">
         <area shape="circle" coords="370,500,120" href="../shapes/geometry.html" alt="click me">
