--- a/treasure-hunt/level-2.html
+++ b/treasure-hunt/level-2.html
@@ -2,13 +2,26 @@
 <html style = "font-family:geneva,arial,helvetica;background-color: black">
 <!-- Go to jug.html -->
 <head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
   <meta charset="utf-8">
+    <meta name="robots" content="noindex" />
   <title>Level 2</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" href="../favicon.png">
 </head>
 <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
+
     <a><font color="white" size="10" face="Geneva"><strong>2</strong></font></a>
     <p><font color="white" size="8" face="Geneva">That's what I'm talking about!</font></p>
 </div>
