--- a/treasure-hunt/level-3.html
+++ b/treasure-hunt/level-3.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <!-- Nothing to see here!-->
 <head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex" />
     <title>Nope!</title>
 </head>
 <body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>Go back and check the source.</p>
 </body>
 </html>
