--- a/treasure-hunt/shapes/elvispresley.html
+++ b/treasure-hunt/shapes/elvispresley.html
@@ -1,3 +1,20 @@
+<html><head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
+    <meta name="robots" content="noindex" />
+</head>
+<body>
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 You're on the right track. Just need to do a bit more digging.
 <!-- Google, and read carefully. Answer is two words, all lowercase, no spaces.  -->
 <!-- Example: "two words" translates to "twowords.html" -->
+</body>
+</html>
