--- a/treasure-hunt/shapes/geometry.html
+++ b/treasure-hunt/shapes/geometry.html
@@ -2,13 +2,27 @@
 <html style = "font-family:geneva,arial,helvetica;background-color: black">
 <!-- zip your lips -->
 <head>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163408633-1');
+</script>
   <meta charset="utf-8">
+    You're on the right track. Just need to do a bit more digging.
+<!-- Google, and read carefully. Answer is two words, all lowercase, no spaces.  -->
+<!-- Example: "two words" translates to "twowords.html" -->
   <title>Gee I'm a tree</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
 
 <body id="bod">
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>
 
         // Convert to 32bit integer
