--- a/treasure-hunt/shapes/geometry.html
+++ b/treasure-hunt/shapes/geometry.html
@@ -2,7 +2,7 @@
 <html style = "font-family:geneva,arial,helvetica;background-color: black">
 <!-- zip your lips -->
 <head>
-          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <!-- IGNORE THE GOOGLE STUFF-->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -18,6 +18,7 @@
 </head>
 
 <body id="bod">
+          <!--IGNORE THE GOOGLE STUFF-->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>
