--- a/treasure-hunt/igloo/westwind.html
+++ b/treasure-hunt/igloo/westwind.html
@@ -13,8 +13,7 @@
 </script>
   <meta charset="utf-8">
     <meta name="robots" content="noindex" />
-  <title>I'm not speaking to you!</title>
-    <!-- But I'm not mad at you -->
+  <title>First Word</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -22,12 +21,10 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
-    <a><font color="white" size="10" face="Geneva"><strong>11</strong></font></a>
+    <a><font color="white" size="10" face="Geneva"><strong>13</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">Something is incorrect</font></p>
-    <img src="shadow.speaking" height="500" width="960">
-    <!-- the way you will get your new information is very similar to level 9 -->
-
+<p><font color="white" size="6" face="Geneva">Can you find the answer?</font></p>
+<img src="plot.png" class="center" height="650" width="500">
 
 
 
