--- a/treasure-hunt/shapes/night.html
+++ b/treasure-hunt/shapes/night.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- ajukkws -->
 <html style = "font-family:geneva,arial,helvetica;background-color:black;">
 
 <head>
@@ -13,7 +14,8 @@
 </script>
   <meta charset="utf-8">
     <meta name="robots" content="noindex" />
-  <title>Placeholder</title>
+  <title>The keys to solving this level...</title>
+    <!-- Are right in front of you -->
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -23,11 +25,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
     <a><font color="white" size="10" face="Geneva"><strong>12</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">Level 12 is still under construction</font></p>
+    <img src="keys.jpeg" href="../igloo/westwind.html" usemap="#door" class="center" height="400" width="600">
+    <map id="door" name="door">
+    <!-- A -> S -->
+    <!-- T -> Y -->
 
-
-
-
+    </map>
 </div>
 </body>
 </html>
