--- a/treasure-hunt/igloo/star.html
+++ b/treasure-hunt/igloo/star.html
@@ -13,8 +13,7 @@
 </script>
   <meta charset="utf-8">
     <meta name="robots" content="noindex" />
-  <title>Round trips</title>
-    <!-- keep you in good shape-->
+  <title>Placeholder</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -22,20 +21,13 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
-    <a><font color="white" size="10" face="Geneva"><strong>14</strong></font></a>
+    <a><font color="white" size="10" face="Geneva"><strong>15</strong></font></a>
 
-<ol><font color="white" size="6" face="Geneva">
-    <li>A card game, but also deception</li>
-    <li>British money, type of silver</li>
-    <li>Narwhal type fish, long and silver, pinocchio</li>
-    <li>Will you be my **** this February?</li>
-    <li>TJMax, blue version</li>
-    <li>Abraham</li>
-    <li>[human who eats other humans]-> Replace C with H</li>
-    <li>Sonny and Bobby ***</li>
-    <li>Population: 199,924 (2018)</li>
-    <li>67741</li>
-</font></ol>
+<p><font color="white" size="6" face="Geneva">Under Construction. </font></p>
+
+
+
+
 </div>
 </body>
 </html>
