--- a/treasure-hunt/shapes/night.html
+++ b/treasure-hunt/shapes/night.html
@@ -29,7 +29,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <map id="door" name="door">
     <!-- A -> S -->
     <!-- T -> Y -->
-
+        <area shape="rect" coords="0,0,600,400" href="../igloo/westwind.html" alt="click me">
     </map>
 </div>
 </body>
