--- a/treasure-hunt/igloo/potato.html
+++ b/treasure-hunt/igloo/potato.html
@@ -29,7 +29,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <li>British money, type of silver</li>
     <li>Narwhal type fish, long and silver, pinocchio</li>
     <li>Will you be my **** this February?</li>
-    <li>TJMax, blue version</li>
+    <li>TJMax, blue version, singular</li>
     <li>Abraham</li>
     <li>[human who eats other humans]-> Replace C with H</li>
     <li>Sonny and Bobby ***</li>
