--- a/treasure-hunt/igloo/index.html
+++ b/treasure-hunt/igloo/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html style = "font-family:geneva,arial,helvetica;background-color:black;">
-
+<html style = "font-family:geneva,arial,helvetica;background-color:#070707;">
+<!--IAMHIDDEN-->
 <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163408633-1"></script>
@@ -13,7 +13,7 @@
 </script>
   <meta charset="utf-8">
     <meta name="robots" content="noindex" />
-  <title>Image threshold < 9</title>
+  <title>style.css</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -21,11 +21,12 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
-    <a><font color="white" size="10" face="Geneva"><strong>15</strong></font></a>
+    <a> <!--FINDME-->
+        <font color="white" size="10" face="Geneva"><strong>16</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">Nice. Get ready for that sweet sixteen.</font></p>
-    <img src="mission.jpg" >
-
+<p><font color="white" size="6" face="Geneva"></font></p>
+    <img src="level16.png">
+<!--HURRY UP-->
 
 
 
