--- a/treasure-hunt/igloo/pencil.html
+++ b/treasure-hunt/igloo/pencil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style = "font-family:geneva,arial,helvetica;background-color:black;">
+<html style = "font-family:geneva,arial,helvetica;background-color:#070707;">
 
 <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -13,7 +13,7 @@
 </script>
   <meta charset="utf-8">
     <meta name="robots" content="noindex" />
-  <title>Image threshold < 9</title>
+  <title>Placeholder</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
@@ -21,10 +21,9 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
-    <a><font color="white" size="10" face="Geneva"><strong>15</strong></font></a>
+    <a><font color="white" size="10" face="Geneva"><strong>17</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">Nice. Get ready for that sweet sixteen.</font></p>
-    <img src="mission.jpg" >
+<p><font color="white" size="6" face="Geneva">Under Construction.</font></p>
 
 
 
