--- a/treasure-hunt/igloo/deadbeef.html
+++ b/treasure-hunt/igloo/deadbeef.html
@@ -13,20 +13,17 @@
 </script>
   <meta charset="utf-8">
     <meta name="robots" content="noindex" />
-  <title>That fish though</title>
-    <!-- What could it mean? -->
+  <title>Placeholder</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="icon" href="../../favicon.png">
 </head>
 <body id="bod" >
-<!-- What a colorful idea. -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8RT8FG"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="mainbody">
-    <a><font color="white" size="10" face="Geneva"><strong>17</strong></font></a>
+    <a><font color="white" size="10" face="Geneva"><strong>18</strong></font></a>
 
-<p><font color="white" size="6" face="Geneva">Interesting.</font></p>
-    <img src="mystery17.png" class="center">
+<p><font color="white" size="6" face="Geneva">Under Construction.</font></p>
 
 
 
